k8s/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: url-shortener
  namespace: dev

spec:
  replicas: 2
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 40%
      maxUnavailable: 10%
  selector:
    matchLabels:
      api: url-shortener-api
  template:
    metadata:
      labels:
        api: url-shortener-api
    spec:
      containers:
        - name: url-shortener-api
          image: vinciusaf/url-shortener-api:f74f370
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3333
          startupProbe:
            httpGet: 
              path: /api/healthz
              port: 3333
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /api/readyz
              port: 3333
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 15
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3333
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 30
            initialDelaySeconds: 60
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 192Mi
