k8s/api/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: url-shortener-service
  namespace: dev

spec:
  type: ClusterIP
  selector:
    api: url-shortener-api
  ports:
    - port: 80
      targetPort: 3333
