k8s/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: url-shortener-ingress
  namespace: dev
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: url-shortener.local
      http:
        paths:
         - path: /
           pathType: Prefix
           backend: 
            service:
              name: url-shortener-service
              port:
                number: 80
